[package]
name = "esa-cli"
version = "0.1.0"
authors = ["koizr <koizumi.ryo.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.0.0-rc.8", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "4"
log = "0.4"
env_logger = "0.9"
